--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ardentis-fancore-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>FC Ardentis - Club de football région parisienne</title>
+    <meta name="description" content="FC Ardentis, club de football fondé en 2025 en région parisienne. Rejoignez notre équipe basée sur la cohésion, le respect et la performance. Entraînements mercredi et dimanche." />
+    <meta name="author" content="FC Ardentis" />
 
-    <meta property="og:title" content="ardentis-fancore-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="FC Ardentis - Le football, notre fierté locale" />
+    <meta property="og:description" content="Club de football fondé en 2025, passion et esprit d'équipe. Rejoignez FC Ardentis en région parisienne." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <!-- Sport Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&family=Barlow+Condensed:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   </head>
 
   <body>
