--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="FC Ardentis - Le football, notre fierté locale" />
     <meta property="og:description" content="Club de football fondé en 2025, passion et esprit d'équipe. Rejoignez FC Ardentis en région parisienne." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/preview.png" />
+    <meta property="og:image" content="/lovable-uploads/ad48e0e9-aa8d-4228-8e16-a621364627d3.png" /> // preview est le logo
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/preview.png" />
+    <meta name="twitter:image" content="/lovable-uploads/ad48e0e9-aa8d-4228-8e16-a621364627d3.png" /> // preview est le logo
     
     <!-- Sport Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
