--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
     <meta property="og:title" content="FC Ardentis - Le football, notre fierté locale" />
     <meta property="og:description" content="Club de football fondé en 2025, passion et esprit d'équipe. Rejoignez FC Ardentis en région parisienne." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/ad48e0e9-aa8d-4228-8e16-a621364627d3.png" /> // preview est le logo
+    <meta property="og:image" content="/lovable-uploads/ad48e0e9-aa8d-4228-8e16-a621364627d3.png" /> 
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/lovable-uploads/ad48e0e9-aa8d-4228-8e16-a621364627d3.png" /> // preview est le logo
+    <meta name="twitter:image" content="/lovable-uploads/ad48e0e9-aa8d-4228-8e16-a621364627d3.png" />
     
     <!-- Sport Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&family=Barlow+Condensed:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/lovable-uploads/ad48e0e9-aa8d-4228-8e16-a621364627d3.png" />
   </head>
 
   <body>
