--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>FC Ardentis - Club de football région parisienne</title>
     <meta name="description" content="FC Ardentis, club de football fondé en 2025 en région parisienne. Rejoignez notre équipe basée sur la cohésion, le respect et la performance. Entraînements mercredi et dimanche." />
     <meta name="author" content="FC Ardentis" />
+    <meta name="theme-color" content="#0f1628" />
 
     <meta property="og:title" content="FC Ardentis - Le football, notre fierté locale" />
     <meta property="og:description" content="Club de football fondé en 2025, passion et esprit d'équipe. Rejoignez FC Ardentis en région parisienne." />
@@ -13,16 +14,19 @@
     <meta property="og:image" content="/assets/logo.png" /> 
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="/assets/logo.png" />
     
-    <!-- Sport Fonts -->
+    <!-- Premium Display Font - Clash Display -->
+    <link href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&display=swap" rel="stylesheet">
+    
+    <!-- Sport Fonts - Barlow -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&family=Barlow+Condensed:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
   </head>
 
   <body>
